# agentic-rn-demo

./: .gitignore  .prettierrc  AGENTS.md  CLAUDE.md  CONTEXT-HANDOFF.md  README.md  lefthook.yml  orval.config.ts  package.json  pnpm-lock.yaml
apps/server/: .env.example  AGENTS.md  pyproject.toml
apps/server/src/api/: AGENTS.md  main.py
apps/server/src/api/v1/: dependencies.py
apps/server/src/api/v1/routes/: preferences.py  team.py
apps/server/src/api/v1/schemas/: preference_schemas.py  team_schemas.py
apps/server/src/application/: AGENTS.md
apps/server/src/application/services/: preferences_service.py  team_service.py
apps/server/src/config/: AGENTS.md  settings.py
apps/server/src/domain/: AGENTS.md
apps/server/src/domain/models/: mood_entry.py  team_member.py  user_preferences.py
apps/server/src/domain/services/: team_validation.py  validation.py
apps/server/src/infrastructure/: AGENTS.md
apps/server/src/infrastructure/database/: connection.py
apps/server/src/infrastructure/database/mappers/: preferences_mapper.py  team_mapper.py
apps/server/src/infrastructure/database/models/: mood_entry_model.py  preferences_model.py  team_member_model.py
apps/server/src/infrastructure/database/repositories/: preferences_repo.py  team_repo.py
apps/server/src/seeds/: team_seed.py
apps/server/tests/: conftest.py
apps/server/tests/api/: test_team_routes.py
apps/server/tests/application/: test_team_service.py
apps/server/tests/domain/: test_team_member.py  test_team_validation.py
apps/server/tests/infrastructure/: test_team_repo.py
(+105 files in other folders)
